--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: BY Blog
-SEOTitle: 柏荧的博客 | BY Blog
+SEOTitle: readyao的博客
 header-img: img/post-bg-desk.jpg
 email: 529188712@qq.com
 description: "Every failure is leading towards success."
@@ -21,8 +21,8 @@ RSS: false
 # weibo_username:     yaoxiaokui
 zhihu_username:     yaoxiaokui
 github_username:    yaoxiaokui
-facebook_username:  baiying.qiu.7
-jianshu_username:   e71990ada2fd
+facebook_username:  yaoxiaokui
+jianshu_username:   yaoxiaokui
 #twitter_username:   yaoxiaokui
 
 
@@ -64,9 +64,9 @@ gitalk:
   enable: true    #是否开启Gitalk评论
   clientID: f2c84e7629bb1446c1a4                            #生成的clientID
   clientSecret: ca6d6139d1e1b8c43f8b2e19492ddcac8b322d0d    #生成的clientSecret
-  repo: qiubaiying.github.io    #仓库名称
-  owner: qiubaiying    #github用户名
-  admin: qiubaiying
+  repo: yaoxiaokui.github.io    #仓库名称
+  owner: yaoxiaokui    #github用户名
+  admin: yaoxiaokui
   distractionFreeMode: true #是否启用类似FB的阴影遮罩
 
 
@@ -78,7 +78,7 @@ ba_track_id: b50bf2b12b5338a1845e33832976fd68
 
 # Google Analytics
 ga_track_id: 'UA-90855596-1'            # Format: UA-xxxxxx-xx
-ga_domain: qiubaiying.top               # 默认的是 auto, 这里我是自定义了的域名，你如果没有自己的域名，需要改成auto
+ga_domain: auto               # 默认的是 auto, 这里我是自定义了的域名，你如果没有自己的域名，需要改成auto
 
 
 
@@ -99,11 +99,11 @@ service-worker: true
 # Friends
 friends: [
     {
-        title: "WY",
-        href: "http://zhengwuyang.com"
+        title: "知乎",
+        href: "https://www.zhihu.com/people/yaoxiaokui"
     },{
-        title: "简书·BY",
-        href: "http://www.jianshu.com/u/e71990ada2fd"
+        title: "简书",
+        href: "https://www.jianshu.com/u/0773694aceae"
     },{
         title: "Apple",
         href: "https://apple.com"
