--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ github_repo: "https://github.com/yaoxiaokui/yaoxiaokui.github.io.git" # you code
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
 sidebar-about-description: "Goals determine what you going to be!"
-sidebar-avatar: /img/TIM图片20180526154312.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
+sidebar-avatar: /img/my_head_image.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
 
