--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ RSS: false
 zhihu_username:     yaoxiaokui
 github_username:    yaoxiaokui
 facebook_username:  yaoxiaokui
-jianshu_username:   yaoxiaokui
+jianshu_username:   0773694aceae
 #twitter_username:   yaoxiaokui
 
 
@@ -57,7 +57,7 @@ kramdown:
 
 # 评论系统
 # Disqus（https://disqus.com/）
-# disqus_username: qiubaiying
+disqus_username: yaoxiaokui
 
 # Gitalk
 gitalk:
@@ -74,10 +74,10 @@ gitalk:
 
 # Analytics settings
 # Baidu Analytics
-ba_track_id: b50bf2b12b5338a1845e33832976fd68
+ba_track_id: 
 
 # Google Analytics
-ga_track_id: 'UA-90855596-1'            # Format: UA-xxxxxx-xx
+ga_track_id: 'UA-119925133-1'            # Format: UA-xxxxxx-xx
 ga_domain: auto               # 默认的是 auto, 这里我是自定义了的域名，你如果没有自己的域名，需要改成auto
 
 
