--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: BY Blog
+title: readyao Blog
 SEOTitle: readyao的博客
 header-img: img/post-bg-desk.jpg
 email: 529188712@qq.com
