--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ github_repo: "https://github.com/yaoxiaokui/yaoxiaokui.github.io.git" # you code
 
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
-sidebar-about-description: "Goals determine what you going to be!"
+sidebar-about-description: "Be The Best!"
 sidebar-avatar: /img/my_head_image.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
